Fix Copy Buttom overlap

--- a/website/static/css/code-blocks-buttons.css
+++ b/website/static/css/code-blocks-buttons.css
@@ -5,13 +5,14 @@ pre {
 
 pre .btnIcon {
   position: absolute;
+  margin: 0;
   top: 4px;
   z-index: 2;
   cursor: pointer;
   border: 1px solid transparent;
   color: #383030;
-  background-color: #f5f4f7;
-  height: 30px;
+  background-color: transparent;
+  /*height: 30px;*/
   transition: all .25s ease-out;
 }
 
@@ -23,6 +24,8 @@ pre .btnIcon:hover {
 .btnIcon__body {
   align-items: center;
   display: flex;
+  margin: 0 0;
+  padding: 0 0;
 }
 
 .btnIcon svg {
